optimize jvm settings